Fix header menu spacing

--- a/pathmind-webapp/frontend/styles/layouts/vaadin-app-layout.css
+++ b/pathmind-webapp/frontend/styles/layouts/vaadin-app-layout.css
@@ -12,7 +12,7 @@
 }
 :host [part="navbar"] {
   align-items: stretch;
-  padding: 0 var(--lumo-space-xs);
+  padding: 0 var(--lumo-space-m);
 }
 :host [part="navbar"]::before {
   content: none;
